remove some ettoday words

--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -174,7 +174,7 @@
 
 ## articles
 ### 2016/11/22 GMT0+8:00 http://www.ettoday.net/news/20161122/815795.htm
-- <h2><a href="http://www.ettoday.net/news/20161122/815795.htm" target="_blank">董介白／為法院金字塔型組織結構改革喝采</a></h2><p>▲兌現司法改革，蔡英文總統親任司改委員會召集人。</p><p>文／董介白</p><p>蔡總統的司法改革開出第一劑藥方，司法院公布將朝「金字塔型」的訴訟組織改革，換言之，包括最高法院、最高行政法院和公懲會等3個終審法院的法官人數，要大幅減少，把具經驗傳承的司法審判人力調往一、二審法院，充實事實審的基礎裁判品質，如此，可大大減低案源往終審法院跑的奇怪現象，更重要的是，代表國家行使公訴權的檢察官，在檢察階段，切莫為起訴而起訴，為上訴而上訴，而法官一切看據證說話，該怎麼判就該怎麼判，重拾人民對司法的信心。</p><p>目前全國三審各級法院法官總共有2061人，最高法院的法官有54人，但調最高法院辦事的法官卻有23人，實際在最高法院辦案的法官有77人，至於最高行政法院的法官人數則有17人，調辦事的法官只有4人，總人數超過百人的終審法院，與世界各先進國家相較，台灣的終審法院法官人數真的是不少。</p><p>攸關人民乃至公司財產等權益至鉅的行政訴訟，最高行政法院最近3 年的年收案數量，已經大大減少到千餘件左右，與過去動輒3、4千的年收案量相較，數字會說話，然而，最高行政法院法官的上訴駁回率卻高達九成，換言之，人民與政府打官司的失敗率高達九成。</p><p>這其中問題出在那裡，難道與政府打官司者，盡都是些刁民、訟棍嗎？答案絕對不是的，大部分不都是因求告無門而被迫走上法院嗎？但我們的行政訴訟，從一開始的訴願到行政訴訟，充斥著政治風向球，行政訴訟的法官全都由普通法官轉換跑道而來，簡單的在職訓練旋即走馬上任，從諸多的裁判個案可見，行政訴訟的法官極為欠缺憲法層次的思維，勇於挑戰政府的裁判個案更是少到可憐。</p><p>從駁回率九成的數字看，不禁讓人聯想到，難道行政訴訟的法官是在幫政府做打手嗎？不該捍衛人民的權利嗎？幫幫老百姓吧！</p><p>至於最高法院，過去被譏為發回法院，讓案件流浪在二、三審之間，徘徊不定，雖然這些年來，最高法院為除去罵名戮力改革，發回率頓時降到只剩一成左右，但有些因草率結案的案件，卻往最高檢察署的非常上訴或再審跑，從最高檢及高院的收案量可見一般。</p><p>人民會對司法沒有信心，原因很多，讓訴訟當事人感受深刻的個案，法官如果沒判好，後續在民間發酵的威力相當驚人，這也是在歷次民調中，民眾殷切期待司法改革的關鍵所在。</p><p>▲法務部長邱太三為檢察官出身，表達「挺司改」立場！（圖／記者季相儒攝）</p><p>►►►隨時加入觀點與討論，給88論壇粉絲團按個讚！</p><p>●作者：董介白，東森新聞雲撰述副總編輯，以上言論不代表本公司立場。88論壇歡迎多元的聲音與觀點，來稿請寄：editor88@ettoday.net</p> #董介白 #其他 #ETToday東森新聞雲 #2016-11-22
+- <h2><a href="http://www.ettoday.net/news/20161122/815795.htm" target="_blank">董介白／為法院金字塔型組織結構改革喝采</a></h2><p>▲兌現司法改革，蔡英文總統親任司改委員會召集人。</p><p>文／董介白</p><p>蔡總統的司法改革開出第一劑藥方，司法院公布將朝「金字塔型」的訴訟組織改革，換言之，包括最高法院、最高行政法院和公懲會等3個終審法院的法官人數，要大幅減少，把具經驗傳承的司法審判人力調往一、二審法院，充實事實審的基礎裁判品質，如此，可大大減低案源往終審法院跑的奇怪現象，更重要的是，代表國家行使公訴權的檢察官，在檢察階段，切莫為起訴而起訴，為上訴而上訴，而法官一切看據證說話，該怎麼判就該怎麼判，重拾人民對司法的信心。</p><p>目前全國三審各級法院法官總共有2061人，最高法院的法官有54人，但調最高法院辦事的法官卻有23人，實際在最高法院辦案的法官有77人，至於最高行政法院的法官人數則有17人，調辦事的法官只有4人，總人數超過百人的終審法院，與世界各先進國家相較，台灣的終審法院法官人數真的是不少。</p><p>攸關人民乃至公司財產等權益至鉅的行政訴訟，最高行政法院最近3 年的年收案數量，已經大大減少到千餘件左右，與過去動輒3、4千的年收案量相較，數字會說話，然而，最高行政法院法官的上訴駁回率卻高達九成，換言之，人民與政府打官司的失敗率高達九成。</p><p>這其中問題出在那裡，難道與政府打官司者，盡都是些刁民、訟棍嗎？答案絕對不是的，大部分不都是因求告無門而被迫走上法院嗎？但我們的行政訴訟，從一開始的訴願到行政訴訟，充斥著政治風向球，行政訴訟的法官全都由普通法官轉換跑道而來，簡單的在職訓練旋即走馬上任，從諸多的裁判個案可見，行政訴訟的法官極為欠缺憲法層次的思維，勇於挑戰政府的裁判個案更是少到可憐。</p><p>從駁回率九成的數字看，不禁讓人聯想到，難道行政訴訟的法官是在幫政府做打手嗎？不該捍衛人民的權利嗎？幫幫老百姓吧！</p><p>至於最高法院，過去被譏為發回法院，讓案件流浪在二、三審之間，徘徊不定，雖然這些年來，最高法院為除去罵名戮力改革，發回率頓時降到只剩一成左右，但有些因草率結案的案件，卻往最高檢察署的非常上訴或再審跑，從最高檢及高院的收案量可見一般。</p><p>人民會對司法沒有信心，原因很多，讓訴訟當事人感受深刻的個案，法官如果沒判好，後續在民間發酵的威力相當驚人，這也是在歷次民調中，民眾殷切期待司法改革的關鍵所在。</p><p>▲法務部長邱太三為檢察官出身，表達「挺司改」立場！（圖／記者季相儒攝）</p><p>►►►隨時加入觀點與討論，給88論壇粉絲團按個讚！</p><p>●作者：董介白，東森新聞雲撰述副總編輯</p> #董介白 #其他 #ETToday東森新聞雲 #2016-11-22
 
 # 張淵森
 ## backgrounds
@@ -634,7 +634,7 @@
 
 ## articles
 ### 2017/02/21 GMT0+8:00 http://www.ettoday.net/news/20170221/870333.htm
-- <h2><a href="http://www.ettoday.net/news/20170221/870333.htm" target="_blank">林忠正／恐龍司法怎麼改？陪審制有解</a></h2><p>▲為兌現司法改革，蔡英文總統親任司法改革國是會議籌備委員會召集人。</p><p>文／林忠正</p><p>多年來，台灣民調皆顯示司法部門一直是民眾最不信任或最不滿意的機關。為此，蔡英文總統兌現選前承諾於2017年1月間親自擔任召集人，並遴選成各方人士16人成立了司法改革國是會議籌備委員會。日前也公布了5個分組會議的21大類議題與101位分組委員的名單，包括16位原先的籌備委員，另有15位是票選產生的法官、檢察官和律師，其他70位則由籌備會推薦人選，並規畫於6月間召開3天司法改革的國家是會議。</p><p>滿桌菜單民眾看不懂</p><p>議題公布後，多數民眾看不懂這些議題內容，也很難了解這些議題和保障司法正義有何關係，更不清楚與自己本身的權益有何關聯，乃至於民眾反應並不熱烈，甚至擔心這次的司法改革國是會議，會不會又再次淪為司法界的大拜拜？如果開完會的結果司法亂象依然不變，僅再次擴充了法院和檢調機關的人員編制與預算，增加一些主官位子而已。其實司法圈的人都知道，無論多進步的司法制度，在執行方面都需隨著社會變遷而調整，並不是一次會議就能達到理想境界。</p><p>回顧台灣過去2次司法改革國是會議，都是朝野合力進行體制的革新，而且成果不凡。1990年，李登輝總統會見「野百合學運」的學生代表，同意召開國是會議解決重大憲政爭議。同年6月28日，在國民黨和民進黨的全力支持下，召開國是會議決定癈止「動員戡亂時期條款」，終結了「萬年國會」，恢復國會定期改選的民主制度，拋棄了獨裁的威權體制，奠定了台灣真正民主化的基礎。1996年李登輝連任總統後，於同年12月間召開國家發展的國是會議（國發會），雖經濟議題居多，但這次朝野集會最大的貢獻即為「癈省」，讓台灣進一步走向正常的國家體制。</p><p>2017年即將召開的年金改革國是會議，則是面對台灣人口迅速老化所帶來的退休制度破產問題，希望拉近官民不同的退休制度，建立「老有所終」的公平社會。而這個年金會議説得上是「全民利害與共」的體制大翻修，冠以國是會議也説得過去。然而，回頭看看這次的司法改革國是會議內容，會覺得這根本不是個體制大改造的朝野會議，因為部分議題只是一些司法執行的技術性會議，而且應是由總統或司法院長所領導的司法改革研究組織，長期需投入研究和推動改革的目標。既然號稱司法改革國是會議，就要做到一些關鍵性的體制改造，如此才能進一歩落實司法正義，滿足民眾的期待。</p><p>▲李登輝同意召開國是會議解決重大憲政爭議，終結萬年國會之歷程。（圖／政治中心製）</p><p>陪審制能解決檢察官弊端</p><p>其實，最讓一般人詬病的司法問題，不外乎是「檢察官濫訴」和「法官濫用自由心証」的弊端。不少案子明明證據薄弱或是無罪、微罪的行為，檢察官也常重重起訴，還有輸了也要不斷上訴的潛規則。即使一件小小的刑事案件，也常得糾纏多年，使得當事人和關係人承受不少壓力。為何某些檢察官要如此濫訴？説穿了，就是為了求業績和升官！</p><p>原因在於，査案檢察官寫完起訢書後通常就沒事了，但出庭公訴檢察官有可能接手的案子過多，常常不清楚起訴書的內容和事證，無非僅講些「如起訢書所言」的官話，然後坐在法庭上熬時間。此外，法官想在法庭上搞清楚案情也不容易，因為查案檢察官不會來法庭。於是，辨案起訢的檢察官只負責寫起訴書，不必出席刑庭的調查和辯論，訴訟的成敗和他也沒什麼關係，更不必承擔被告被判冤獄，或無罪後卻傾家盪財的賠償責任，就連一句抱歉也不必表達！這不是檢察官人力不足才造成辨案品質不佳的理由，其實就是體制設計不良的問題！</p><p>台灣的檢察官約有1,400人，所有地方法院一年新收的大小刑事案件約有47萬件，也就是說，平均每位檢察官每年需處理335件刑事案件。美國人口3.2億，各類檢察官約7萬人，一年至少要處理2千多萬件刑事起訴案，平均每位檢察官每年接到約300多件案件。然而，美國法院採陪審制，檢察官必需全程參與法院的調查和辯論，不但工作量多，品質要求也比較高。於是在陪審制度之下，檢察官的優劣立分不需什麼退場機制，因為打輸的官司多了，就是得走路；此外，陪審制亦會減少檢察官的濫訴，因為濫訴很可能會打輸官司而被淘汰。</p><p>這也就是在陪審制度下，為何絶大多數的刑事案件會由檢察官和被告律師達成認罪協商，而不必再進行法院的審判。而且，大部分的刑案也都不會上訴到高院（上訴法院）。從這個角度來看，陪審制度不也節省許多人民和國家的資源嗎？以美國1999年的統計為例，在聯邦地院動用到陪審團的受理刑案件僅5％不到，而民事、刑事案子合併計算也不到2.5％；各州地院新受理的刑案中，不到1％的案子會動用陪審團，若民、刑事合併，更低於0.7％。</p><p>陪審制能讓法官公正客觀</p><p>台灣常批評檢察官濫訴，但刑案的定罪率為何又高達96.6％？（中國大陸的定罪率甚至高達99％，這又有何意義？）關鍵就在於台灣法官的司法制度！法官也是人，法官有了升遷制度，自然會配合司法體系現有的主流文化以及「上級的期待」，否則怎麼升官？想升官就不太可能有真正專業的「獨立審判」！尤其現在媒體鋪天蓋地，加上諾大的民粹壓力，法官為何得自己一個人承受呢？如此情勢下，又怎能期待法官專業的「獨立審判」呢？</p><p>此外，審判過程中，由於辦案檢察官通常不會出庭，而是由公訴檢察官執行公訴任務。為了釐清案情，法官不得不仔細詢問被告，這會導致當事人覺得法官跟檢察官站在同一條線上，並非中立、公正的問案。加上法官在判決上享有「自由心証」的特權，刑事被告或輸了民事官司的一方，當然就會懷疑法官的立場。還有一些缺乏追求正義的法官案件一多就偷懶，所以判決盡量附合起訴書能省事就省事，反正還有二審、三審接手處理。結果就是，當事人懷疑法官是恐龍，而敗訴一方不打到三審，甚至不走到再審或非常上訴就不甘心。</p><p>然而，我們的法官所辨的案子真的太多了嗎？美國聯邦和各州各級法院的法官總數約3萬人，最近一年審理、民刑事案件約1億又3百萬件，平均每位法官一年約處理3,300件；台灣法官約2,100人，法院一年處理的民、刑事案件約300萬件，平均每位法官一年處理約1,400件大小案子。由此可見，法官人數不足不是審判品質不佳的真正理由，真正的原因，還是體制設計不良的問題。</p><p>▲陪審制是實踐直接民主的最佳途徑。（圖／路透社／示意圖）</p><p>陪審制讓社會尊重審判結果</p><p>也有不少民眾懷疑法官會拿錢了事。其實在陪審制度下，法官才能真正公正的執行「當事人進行主義」，也不必承受來自上級、親友或是民粹輿論的壓力。有罪、無罪概由陪審團一致性決議，法官只是依陪審團的決定從事量刑工作。辨案的檢察官不但要用心辦案，努力收集犯罪證據，更會要求警調人員遵守偵查的正當程序（程序正義）；律師也不必看前顧後，為了自己往後的生意著想，一直要對每個法官必恭必敬，而不敢在法庭上力爭當事人應有的權利。</p><p>在陪審制之下，地方法院的法官只要讓雙方在陪審團前充分享有公平、公開的攻防機會，從雙方攻防中釐清事實真相。每位法官也幾乎都是獨任的庭長，如此就少了許多爭取升官的計較，一審法官更不必為了寫長篇大論的判決書而焦頭爛額，也不必去抄一些看不懂「似古非古」的判決內容。屈時，也不會有人再說法官收紅包的問題，法院和法官自然會贏得民眾的信任，因為收買法官也沒什麼效果了，而且要收買全體（6到9位）陪審員做出無罪的共識決，絕對是超高門檻的事情！我們相信檢察官體系反對陪審制是正常的人性反映，大多數法官贊成陪審制也是正常的現象，因為勞逸易位了。</p><p>部分司法機關建議將審判制度改為參審制，大概是傾向引進德國的制度，甄選特定資格的民眾參與審判。德國的參審制度非常複雜，少數來自民間具有表決權的參審員所承受的壓力，一定比人數衆多的陪審員大得多，反而不如英美陪審制的原則簡明可行。由於我們的司法大老們多數是熟悉或留學日本、德國的人士，可能會偏愛自己熟悉的德日體制。所以這次的司法改革國是會議不僅缺乏研究英、美審判制度的學者，更沒邀請具陪審制實務經驗的律師或檢察官參與，改革的眼界自然只限德日範圍內。老把戲玩不出新花樣！改革方向嚴重背離了民眾對於司法大改革的期待。</p><p>天下沒有完美的制度，陪審制和參審制也各有優缺點，在國際間的學術和實務討論也很多。但是2、3百年來英美社會都沒出現過要求癈棄陪審制的浪潮；反而是日本和德國的審判制度改變許多，而且法院都曾沈淪為法西斯政權的血腥打手。顯然英美的司法制度和陪審制具有更高的穩定性，至少是支持英美民主制度的重要基石。最近美國新任總統川普發布了令人爭議的限制移民命令，便立即受到法院的挑戰和制衡，足見司法制度對維護民主體制的重要性。台灣的司法制度，有這種維護民主的制衡設計，和挑戰獨裁者的文化嗎？</p><p>▲學習英美陪審制的規範和經驗，再做微調或分段實施，皆能讓台灣司法邁入改革之路。（圖／達志／示意圖）</p><p>但是，司法界的精英們也千萬不要認為台灣民眾水準不足，沒有能力實施陪審制。數百年前美英社會開始實陪審制時，人民大多沒受過正規教育，但表現上也不算太離譜，更沒有淪為統治者整肅異己的工具。而今天，台灣成年民眾近半具大專教育程度，大部分都具有合乎邏輯的判斷能力，更何況，法官還會對陪審團進行說明。例如本案應適用的實體法、哪方應負舉證責任、完成舉證責任所需的證據程度等，以及形成裁決所需的程序。陪審團在各方詰問和陳述完成後，會就每條檢方起訴的行為是否有罪做出意見一致的共識決（也有極少數州法院採高門檻的絕對多數決，例如12人的陪審團至少必需有10人以上做出有罪或無罪的決議）。</p><p>其他人，包括法官在內都不可以參與或旁聽評議的過程。由於台灣沒有什麼人有陪審制審判的實務經驗，德日刑法的權威更怕地位動搖，不免過度強調了陪審制不可行的論點。英國小報林立， 狗仔充斥，但是審判過程中也沒有發生過追逐陪審員的暴料事件，因為在實施陪審制的國家裡，陪審員洩漏裁決過程，或其他人接觸或打聽陪審員的行為，即使是媒體也會被判處藐視法庭的刑罰。</p><p>除了比較重大的案子，審判時也不是所有案件都要集中陪審員，並將之隔離避免與社會接觸。何況參審制也是從頭學起，那為什麼不採取能普及民眾的司法教育、反映一般公民（對於損害賠償）的價值觀，而且又能實踐直接民主的陪審制？陪審制只要學習英美陪審制度的全套執行規範和經驗，再依社會習俗做些微調，或先從重大民刑案分段實施，都是可以接受的方式。只不過為了加速審判的效率，（美國）聯邦地方法院決定要不要接受檢察官起訴的大陪審團制度，則可改由法官主持的聽証會所取代，而不是維持現在檢察官起訴書的制度，如此無論多爛，地方法院就必須照單全收，毫無拒絕的權利。也只有改採陪審制，台灣社會才會認為我們的司法能直正的走向獨立，脫離政治和黑金對司法的影響！</p><p>好文推薦</p><p>林忠正／美中貿易之戰：To Do or Not To Do？</p><p>林忠正／線上修學位：翻轉高等教育困境</p><p>林忠正／低利率政策，知識經濟的害人毒癮</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●林忠正，經濟學博士，曾任立委、金管會委員、民進黨副秘書長、及中研院、台大教授。以上言論不代表本報立場。88論壇歡迎更多聲音與討論，來稿請寄editor88@ettoday.net</p> #林忠正 #學者 #第四組 #人民參與審判 #ETToday東森新聞雲 #2017-02-21
+- <h2><a href="http://www.ettoday.net/news/20170221/870333.htm" target="_blank">林忠正／恐龍司法怎麼改？陪審制有解</a></h2><p>▲為兌現司法改革，蔡英文總統親任司法改革國是會議籌備委員會召集人。</p><p>文／林忠正</p><p>多年來，台灣民調皆顯示司法部門一直是民眾最不信任或最不滿意的機關。為此，蔡英文總統兌現選前承諾於2017年1月間親自擔任召集人，並遴選成各方人士16人成立了司法改革國是會議籌備委員會。日前也公布了5個分組會議的21大類議題與101位分組委員的名單，包括16位原先的籌備委員，另有15位是票選產生的法官、檢察官和律師，其他70位則由籌備會推薦人選，並規畫於6月間召開3天司法改革的國家是會議。</p><p>滿桌菜單民眾看不懂</p><p>議題公布後，多數民眾看不懂這些議題內容，也很難了解這些議題和保障司法正義有何關係，更不清楚與自己本身的權益有何關聯，乃至於民眾反應並不熱烈，甚至擔心這次的司法改革國是會議，會不會又再次淪為司法界的大拜拜？如果開完會的結果司法亂象依然不變，僅再次擴充了法院和檢調機關的人員編制與預算，增加一些主官位子而已。其實司法圈的人都知道，無論多進步的司法制度，在執行方面都需隨著社會變遷而調整，並不是一次會議就能達到理想境界。</p><p>回顧台灣過去2次司法改革國是會議，都是朝野合力進行體制的革新，而且成果不凡。1990年，李登輝總統會見「野百合學運」的學生代表，同意召開國是會議解決重大憲政爭議。同年6月28日，在國民黨和民進黨的全力支持下，召開國是會議決定癈止「動員戡亂時期條款」，終結了「萬年國會」，恢復國會定期改選的民主制度，拋棄了獨裁的威權體制，奠定了台灣真正民主化的基礎。1996年李登輝連任總統後，於同年12月間召開國家發展的國是會議（國發會），雖經濟議題居多，但這次朝野集會最大的貢獻即為「癈省」，讓台灣進一步走向正常的國家體制。</p><p>2017年即將召開的年金改革國是會議，則是面對台灣人口迅速老化所帶來的退休制度破產問題，希望拉近官民不同的退休制度，建立「老有所終」的公平社會。而這個年金會議説得上是「全民利害與共」的體制大翻修，冠以國是會議也説得過去。然而，回頭看看這次的司法改革國是會議內容，會覺得這根本不是個體制大改造的朝野會議，因為部分議題只是一些司法執行的技術性會議，而且應是由總統或司法院長所領導的司法改革研究組織，長期需投入研究和推動改革的目標。既然號稱司法改革國是會議，就要做到一些關鍵性的體制改造，如此才能進一歩落實司法正義，滿足民眾的期待。</p><p>▲李登輝同意召開國是會議解決重大憲政爭議，終結萬年國會之歷程。（圖／政治中心製）</p><p>陪審制能解決檢察官弊端</p><p>其實，最讓一般人詬病的司法問題，不外乎是「檢察官濫訴」和「法官濫用自由心証」的弊端。不少案子明明證據薄弱或是無罪、微罪的行為，檢察官也常重重起訴，還有輸了也要不斷上訴的潛規則。即使一件小小的刑事案件，也常得糾纏多年，使得當事人和關係人承受不少壓力。為何某些檢察官要如此濫訴？説穿了，就是為了求業績和升官！</p><p>原因在於，査案檢察官寫完起訢書後通常就沒事了，但出庭公訴檢察官有可能接手的案子過多，常常不清楚起訴書的內容和事證，無非僅講些「如起訢書所言」的官話，然後坐在法庭上熬時間。此外，法官想在法庭上搞清楚案情也不容易，因為查案檢察官不會來法庭。於是，辨案起訢的檢察官只負責寫起訴書，不必出席刑庭的調查和辯論，訴訟的成敗和他也沒什麼關係，更不必承擔被告被判冤獄，或無罪後卻傾家盪財的賠償責任，就連一句抱歉也不必表達！這不是檢察官人力不足才造成辨案品質不佳的理由，其實就是體制設計不良的問題！</p><p>台灣的檢察官約有1,400人，所有地方法院一年新收的大小刑事案件約有47萬件，也就是說，平均每位檢察官每年需處理335件刑事案件。美國人口3.2億，各類檢察官約7萬人，一年至少要處理2千多萬件刑事起訴案，平均每位檢察官每年接到約300多件案件。然而，美國法院採陪審制，檢察官必需全程參與法院的調查和辯論，不但工作量多，品質要求也比較高。於是在陪審制度之下，檢察官的優劣立分不需什麼退場機制，因為打輸的官司多了，就是得走路；此外，陪審制亦會減少檢察官的濫訴，因為濫訴很可能會打輸官司而被淘汰。</p><p>這也就是在陪審制度下，為何絶大多數的刑事案件會由檢察官和被告律師達成認罪協商，而不必再進行法院的審判。而且，大部分的刑案也都不會上訴到高院（上訴法院）。從這個角度來看，陪審制度不也節省許多人民和國家的資源嗎？以美國1999年的統計為例，在聯邦地院動用到陪審團的受理刑案件僅5％不到，而民事、刑事案子合併計算也不到2.5％；各州地院新受理的刑案中，不到1％的案子會動用陪審團，若民、刑事合併，更低於0.7％。</p><p>陪審制能讓法官公正客觀</p><p>台灣常批評檢察官濫訴，但刑案的定罪率為何又高達96.6％？（中國大陸的定罪率甚至高達99％，這又有何意義？）關鍵就在於台灣法官的司法制度！法官也是人，法官有了升遷制度，自然會配合司法體系現有的主流文化以及「上級的期待」，否則怎麼升官？想升官就不太可能有真正專業的「獨立審判」！尤其現在媒體鋪天蓋地，加上諾大的民粹壓力，法官為何得自己一個人承受呢？如此情勢下，又怎能期待法官專業的「獨立審判」呢？</p><p>此外，審判過程中，由於辦案檢察官通常不會出庭，而是由公訴檢察官執行公訴任務。為了釐清案情，法官不得不仔細詢問被告，這會導致當事人覺得法官跟檢察官站在同一條線上，並非中立、公正的問案。加上法官在判決上享有「自由心証」的特權，刑事被告或輸了民事官司的一方，當然就會懷疑法官的立場。還有一些缺乏追求正義的法官案件一多就偷懶，所以判決盡量附合起訴書能省事就省事，反正還有二審、三審接手處理。結果就是，當事人懷疑法官是恐龍，而敗訴一方不打到三審，甚至不走到再審或非常上訴就不甘心。</p><p>然而，我們的法官所辨的案子真的太多了嗎？美國聯邦和各州各級法院的法官總數約3萬人，最近一年審理、民刑事案件約1億又3百萬件，平均每位法官一年約處理3,300件；台灣法官約2,100人，法院一年處理的民、刑事案件約300萬件，平均每位法官一年處理約1,400件大小案子。由此可見，法官人數不足不是審判品質不佳的真正理由，真正的原因，還是體制設計不良的問題。</p><p>▲陪審制是實踐直接民主的最佳途徑。（圖／路透社／示意圖）</p><p>陪審制讓社會尊重審判結果</p><p>也有不少民眾懷疑法官會拿錢了事。其實在陪審制度下，法官才能真正公正的執行「當事人進行主義」，也不必承受來自上級、親友或是民粹輿論的壓力。有罪、無罪概由陪審團一致性決議，法官只是依陪審團的決定從事量刑工作。辨案的檢察官不但要用心辦案，努力收集犯罪證據，更會要求警調人員遵守偵查的正當程序（程序正義）；律師也不必看前顧後，為了自己往後的生意著想，一直要對每個法官必恭必敬，而不敢在法庭上力爭當事人應有的權利。</p><p>在陪審制之下，地方法院的法官只要讓雙方在陪審團前充分享有公平、公開的攻防機會，從雙方攻防中釐清事實真相。每位法官也幾乎都是獨任的庭長，如此就少了許多爭取升官的計較，一審法官更不必為了寫長篇大論的判決書而焦頭爛額，也不必去抄一些看不懂「似古非古」的判決內容。屈時，也不會有人再說法官收紅包的問題，法院和法官自然會贏得民眾的信任，因為收買法官也沒什麼效果了，而且要收買全體（6到9位）陪審員做出無罪的共識決，絕對是超高門檻的事情！我們相信檢察官體系反對陪審制是正常的人性反映，大多數法官贊成陪審制也是正常的現象，因為勞逸易位了。</p><p>部分司法機關建議將審判制度改為參審制，大概是傾向引進德國的制度，甄選特定資格的民眾參與審判。德國的參審制度非常複雜，少數來自民間具有表決權的參審員所承受的壓力，一定比人數衆多的陪審員大得多，反而不如英美陪審制的原則簡明可行。由於我們的司法大老們多數是熟悉或留學日本、德國的人士，可能會偏愛自己熟悉的德日體制。所以這次的司法改革國是會議不僅缺乏研究英、美審判制度的學者，更沒邀請具陪審制實務經驗的律師或檢察官參與，改革的眼界自然只限德日範圍內。老把戲玩不出新花樣！改革方向嚴重背離了民眾對於司法大改革的期待。</p><p>天下沒有完美的制度，陪審制和參審制也各有優缺點，在國際間的學術和實務討論也很多。但是2、3百年來英美社會都沒出現過要求癈棄陪審制的浪潮；反而是日本和德國的審判制度改變許多，而且法院都曾沈淪為法西斯政權的血腥打手。顯然英美的司法制度和陪審制具有更高的穩定性，至少是支持英美民主制度的重要基石。最近美國新任總統川普發布了令人爭議的限制移民命令，便立即受到法院的挑戰和制衡，足見司法制度對維護民主體制的重要性。台灣的司法制度，有這種維護民主的制衡設計，和挑戰獨裁者的文化嗎？</p><p>▲學習英美陪審制的規範和經驗，再做微調或分段實施，皆能讓台灣司法邁入改革之路。（圖／達志／示意圖）</p><p>但是，司法界的精英們也千萬不要認為台灣民眾水準不足，沒有能力實施陪審制。數百年前美英社會開始實陪審制時，人民大多沒受過正規教育，但表現上也不算太離譜，更沒有淪為統治者整肅異己的工具。而今天，台灣成年民眾近半具大專教育程度，大部分都具有合乎邏輯的判斷能力，更何況，法官還會對陪審團進行說明。例如本案應適用的實體法、哪方應負舉證責任、完成舉證責任所需的證據程度等，以及形成裁決所需的程序。陪審團在各方詰問和陳述完成後，會就每條檢方起訴的行為是否有罪做出意見一致的共識決（也有極少數州法院採高門檻的絕對多數決，例如12人的陪審團至少必需有10人以上做出有罪或無罪的決議）。</p><p>其他人，包括法官在內都不可以參與或旁聽評議的過程。由於台灣沒有什麼人有陪審制審判的實務經驗，德日刑法的權威更怕地位動搖，不免過度強調了陪審制不可行的論點。英國小報林立， 狗仔充斥，但是審判過程中也沒有發生過追逐陪審員的暴料事件，因為在實施陪審制的國家裡，陪審員洩漏裁決過程，或其他人接觸或打聽陪審員的行為，即使是媒體也會被判處藐視法庭的刑罰。</p><p>除了比較重大的案子，審判時也不是所有案件都要集中陪審員，並將之隔離避免與社會接觸。何況參審制也是從頭學起，那為什麼不採取能普及民眾的司法教育、反映一般公民（對於損害賠償）的價值觀，而且又能實踐直接民主的陪審制？陪審制只要學習英美陪審制度的全套執行規範和經驗，再依社會習俗做些微調，或先從重大民刑案分段實施，都是可以接受的方式。只不過為了加速審判的效率，（美國）聯邦地方法院決定要不要接受檢察官起訴的大陪審團制度，則可改由法官主持的聽証會所取代，而不是維持現在檢察官起訴書的制度，如此無論多爛，地方法院就必須照單全收，毫無拒絕的權利。也只有改採陪審制，台灣社會才會認為我們的司法能直正的走向獨立，脫離政治和黑金對司法的影響！</p><p>好文推薦</p><p>林忠正／美中貿易之戰：To Do or Not To Do？</p><p>林忠正／線上修學位：翻轉高等教育困境</p><p>林忠正／低利率政策，知識經濟的害人毒癮</p><p>●林忠正，經濟學博士，曾任立委、金管會委員、民進黨副秘書長、及中研院、台大教授。以上言論不代表本報立場。88論壇歡迎更多聲音與討論，來稿請寄editor88@ettoday.net</p> #林忠正 #學者 #第四組 #人民參與審判 #ETToday東森新聞雲 #2017-02-21
 
 # 王宗雄
 ## backgrounds
@@ -930,7 +930,7 @@
 
 ## articles
 ### 2017/02/28 GMT0+8:00 http://www.ettoday.net/news/20170228/874840.htm
-- <h2><a href="http://www.ettoday.net/news/20170228/874840.htm" target="_blank">董介白／檢察官在緊張什麼？</a></h2><p>▲司法改革國是會議分組會議於20日展開，但一路走來爭議頻傳，被砲轟是場司法大拜拜。（圖／記者翁嫆琄攝）</p><p>文／董介白</p><p>司法改革國是會議第三組委員、也是高院法官的林孟皇，投書媒體點出檢察體系讓身為該組委員的他非常不安，原因在於，檢察官的司法官屬性正面臨遭剝奪的危境。</p><p>何謂司法官屬性？在行政院法務部所屬的檢察官，有上命下從，有升遷的行政背景與關係，和法院法官的獨立審判不受干預完全不同。我們不禁要問，檢察官為何要如此緊張？從早年的檢察官羈押權喪失，到搜索權、監聽權、扣押被沒收等，檢察官的權利怎麼了？怎麼會節節敗退，在歷史軌跡裡留下侵害人權的種種，注定檢察官的尚方寶劍生鏽，如果檢察官們的心態再不改，被改革是免不了的。</p><p>蔡政府上任後回應全民的司法改革國是會議，人民參與是主軸，也就是「人民的司法」。然而，國是會議分組會議上週陸續開展，各分組會議卻為了委員的背景、為了程序的問題爭執不下；此外，傳統紙媒關注的焦點，多以看熱鬧的心態報導成本最小，又有衝突賣點的委員名單黑箱。乃至於討論才剛起，卻讓民眾有種司法大拜拜的亂象。</p><p>這還只是場邊的花絮而已。口水與不滿總較能吸引閱聽眾的目光，騙騙閱讀及點閱率。事實上會有這些插曲與花絮再所難免，但熱鬧完了仍舊要回到主場才是，切莫模糊了焦點。而媒體的責任，也該發揮督促正向改革的正道才行。</p><p>林孟皇是司改國是會議第三組「權責相符高效率的司法」的委員，暫不論他在司法實務圈內的評價，但他敢言、敢開砲、具高知名度卻是事實，也因此他具有相當程度的媒體話語權。而這組會才剛開，但光是為了主席可否參與表決、議題是否該列為報告案還是討論案，該組法律人委員們竟毫無自覺的爭執不下。試問，國人期待的司改，是請你們來開會、來吵程序問題嗎？</p><p>▲根據《ETtoday東森新聞雲》心情投票結果指出，本次司改多數民眾認為「建立恐龍法官、濫權檢察官淘汰機制」最該優先處理。（圖／翻攝自《ETtoday東森新聞雲》）</p><p>回到林孟皇點出的關鍵問題，來自檢察體系的聲浪為何要排擠自己，主因是檢察官深怕他們的權利一再喪失，到最後成了單純的公訴行政官，沒了司法官在憲法位階上的保障，憂心公務員沒有的司法官專業加給被砍掉，當然還有退休金等福利。</p><p>十多年前，檢察官因為存有羈人取供的質疑，檢察官可自行決定的羈押權換由法官決定；過往，類白色恐怖時代的違法浮濫監聽問題，也讓檢察官的監聽改成令狀，須由法官決定；再者，「馬王政爭」爆發的特偵組違法監聽國會，導致《通訊保障及監察法》（簡稱通保法）的修正；甚至去年最接近的修法，檢察官連扣押沒收的權利都被休掉了。</p><p>現在檢察官能夠穿上司法官外衣的原因，就是檢察官還有傳訊、拘提及通緝，以及起訴與否和緩起訴的最後權利。如果，檢察官連這最後的權利都遭受剝奪的危險，是否還具司法官的身分勢必將被檢討，而這也是林孟皇所謂的檢察官定位問題。</p><p>林孟皇點出，當檢察官身分定位不明時，就會發生限制人民自由的侵害人權實例，檢察官目前所剩不多的權利當中，如限制出境，無論處理過當、有無違反比例原則等，都會造成人民乃至企業的危險。</p><p>▲人權保障與薪水保障，孰輕孰重檢察官的天秤該如何擺放？（圖／達志／示意圖）</p><p>想想，檢察官原來擁有的權利，為何一樣一樣的不見？關鍵原因與人權侵害存有極大的正聯想。如果檢察官只想著要「靠行」仍是司法官，為何不在辦案時，選擇與人權保障站在同一邊；如果只想著薪水保障，棄當事人的基本人權於不顧，可預期的，檢察官將會輸到脫褲子。想想吧！檢察官們。</p><p>好文推薦</p><p>董介白／柯控馬洩密、馬模糊焦點，洩密違憲政體制官司不利</p><p>董介白／林若亞抗稅成功苦等10年！大法官應速審指標案</p><p>董介白／羈押庭宵禁修法人權向前走</p><p>董介白／檢察官、法官心態改革，司改才能成功</p><p>董介白／特偵組關門大吉天注定</p><p>董介白／台灣監獄一人一床難如登天？</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●董介白，東森新聞雲撰述副總編輯，以上言論不代表本公司立場。88論壇歡迎多元的聲音與觀點，來稿請寄：editor88@ettoday.net</p> #董介白 #其他 #第三組 #檢察官定位 #ETToday東森新聞雲 #2017-02-28
+- <h2><a href="http://www.ettoday.net/news/20170228/874840.htm" target="_blank">董介白／檢察官在緊張什麼？</a></h2><p>▲司法改革國是會議分組會議於20日展開，但一路走來爭議頻傳，被砲轟是場司法大拜拜。（圖／記者翁嫆琄攝）</p><p>文／董介白</p><p>司法改革國是會議第三組委員、也是高院法官的林孟皇，投書媒體點出檢察體系讓身為該組委員的他非常不安，原因在於，檢察官的司法官屬性正面臨遭剝奪的危境。</p><p>何謂司法官屬性？在行政院法務部所屬的檢察官，有上命下從，有升遷的行政背景與關係，和法院法官的獨立審判不受干預完全不同。我們不禁要問，檢察官為何要如此緊張？從早年的檢察官羈押權喪失，到搜索權、監聽權、扣押被沒收等，檢察官的權利怎麼了？怎麼會節節敗退，在歷史軌跡裡留下侵害人權的種種，注定檢察官的尚方寶劍生鏽，如果檢察官們的心態再不改，被改革是免不了的。</p><p>蔡政府上任後回應全民的司法改革國是會議，人民參與是主軸，也就是「人民的司法」。然而，國是會議分組會議上週陸續開展，各分組會議卻為了委員的背景、為了程序的問題爭執不下；此外，傳統紙媒關注的焦點，多以看熱鬧的心態報導成本最小，又有衝突賣點的委員名單黑箱。乃至於討論才剛起，卻讓民眾有種司法大拜拜的亂象。</p><p>這還只是場邊的花絮而已。口水與不滿總較能吸引閱聽眾的目光，騙騙閱讀及點閱率。事實上會有這些插曲與花絮再所難免，但熱鬧完了仍舊要回到主場才是，切莫模糊了焦點。而媒體的責任，也該發揮督促正向改革的正道才行。</p><p>林孟皇是司改國是會議第三組「權責相符高效率的司法」的委員，暫不論他在司法實務圈內的評價，但他敢言、敢開砲、具高知名度卻是事實，也因此他具有相當程度的媒體話語權。而這組會才剛開，但光是為了主席可否參與表決、議題是否該列為報告案還是討論案，該組法律人委員們竟毫無自覺的爭執不下。試問，國人期待的司改，是請你們來開會、來吵程序問題嗎？</p><p>▲根據《ETtoday東森新聞雲》心情投票結果指出，本次司改多數民眾認為「建立恐龍法官、濫權檢察官淘汰機制」最該優先處理。（圖／翻攝自《ETtoday東森新聞雲》）</p><p>回到林孟皇點出的關鍵問題，來自檢察體系的聲浪為何要排擠自己，主因是檢察官深怕他們的權利一再喪失，到最後成了單純的公訴行政官，沒了司法官在憲法位階上的保障，憂心公務員沒有的司法官專業加給被砍掉，當然還有退休金等福利。</p><p>十多年前，檢察官因為存有羈人取供的質疑，檢察官可自行決定的羈押權換由法官決定；過往，類白色恐怖時代的違法浮濫監聽問題，也讓檢察官的監聽改成令狀，須由法官決定；再者，「馬王政爭」爆發的特偵組違法監聽國會，導致《通訊保障及監察法》（簡稱通保法）的修正；甚至去年最接近的修法，檢察官連扣押沒收的權利都被休掉了。</p><p>現在檢察官能夠穿上司法官外衣的原因，就是檢察官還有傳訊、拘提及通緝，以及起訴與否和緩起訴的最後權利。如果，檢察官連這最後的權利都遭受剝奪的危險，是否還具司法官的身分勢必將被檢討，而這也是林孟皇所謂的檢察官定位問題。</p><p>林孟皇點出，當檢察官身分定位不明時，就會發生限制人民自由的侵害人權實例，檢察官目前所剩不多的權利當中，如限制出境，無論處理過當、有無違反比例原則等，都會造成人民乃至企業的危險。</p><p>▲人權保障與薪水保障，孰輕孰重檢察官的天秤該如何擺放？（圖／達志／示意圖）</p><p>想想，檢察官原來擁有的權利，為何一樣一樣的不見？關鍵原因與人權侵害存有極大的正聯想。如果檢察官只想著要「靠行」仍是司法官，為何不在辦案時，選擇與人權保障站在同一邊；如果只想著薪水保障，棄當事人的基本人權於不顧，可預期的，檢察官將會輸到脫褲子。想想吧！檢察官們。</p><p>好文推薦</p><p>董介白／柯控馬洩密、馬模糊焦點，洩密違憲政體制官司不利</p><p>董介白／林若亞抗稅成功苦等10年！大法官應速審指標案</p><p>董介白／羈押庭宵禁修法人權向前走</p><p>董介白／檢察官、法官心態改革，司改才能成功</p><p>董介白／特偵組關門大吉天注定</p><p>董介白／台灣監獄一人一床難如登天？</p><p>●董介白，東森新聞雲撰述副總編輯</p> #董介白 #其他 #第三組 #檢察官定位 #ETToday東森新聞雲 #2017-02-28
 
 # 簡祥紋
 ## backgrounds
@@ -1350,7 +1350,7 @@
 
 ## articles
 ### 2017/03/07 GMT0+8:00 http://www.ettoday.net/news/20170307/878821.htm
-- <h2><a href="http://www.ettoday.net/news/20170307/878821.htm" target="_blank">林忠正／司改爭得是民權，不是司法官特權！</a></h2><p>▲司法改革國是會議第一分組首次會議3月1日登場，身為委員之ㄧ的「小燈泡」母親王婉諭也列席討論。</p><p>文／林忠正</p><p>司法改革國是會議尚未登場，法官與檢察官已在籌備會議上公然開幹了！</p><p>雙方所爭執的點在於：誰才是《憲法》保障的法官身分？行政體系的法務部，所管轄的司法官──檢察官，擔心自己會在司改國是會議上失去了司法官的身分，因為那包括高額的司法加給、退養金、職位的保障和行使權力的獨立性，這些，都可能被司改會決議撤銷而化為烏有。於是，在憂心失去「大權」與「大錢」之下，檢察官終於向正牌的「司法官」發動政治鬥爭了！</p><p>司改爭議Vs.八百壯士</p><p>這些誓言「維護正義」的檢察官，如今為了保護自身優渥的權利，居然忘了什麼叫做「正義」，不但杯葛正牌法官參與籌備會的討論，甚至透過法務部首長向司法院長表達極度不爽之意。這種表現，很像現在立法院前埋鍋造飯的「八百壯士」，為了捍衛優厚退休金而誓死打拚。</p><p>其實，在歐美國家多數檢察官的待遇不及法官的一半，但也不敢要求比照法官的處理。而台灣多數檢察官職務，僅相當於美國的助理檢察官。美國一個司法轄區只有一個民選，或由行政首長指派，但經議會同意所任命的檢察官（或稱檢察長），其餘辨案的律師，都叫做助理檢察官。</p><p>老美的檢察系統職位簡單明瞭，不像我們有那麼多的官階和主管；但我們初任檢察官的薪資若換算成美金，卻比美國的助理檢察官高出2、3成之多。這種待遇，救連老美都會流口水，怪不得他們要用力去爭！</p><p>法官Vs.司法官</p><p>事實上，我們這套長期淪為「獨裁者花瓶」的《憲法》裡，在〈司法〉這章的主角，只有提到「司法院」和「法官」而已，而且也指明「掌管審判的法官」才能享有終身的保障。也就是說，在《憲法》裡完全沒有「司法官」這個偽名詞；就連「檢察官」這3個字在〈司法〉這章裡更是連邊都沾不上。依《憲法》的真正旨意，檢察官只能歸屬於「廣意」的警察機關人員。若是如此，檢察官的身分和待遇，怎能自比法官呢？</p><p>此外，在《憲法》的〈人民之權利義務〉這章裡，也表明了：「非由法院依法定程序，不得審問處罰……」什麼時候我們的《憲法》曾讓行政體系的檢察官，變成了司法官呢？獨立的司法體系裡，怎麼能包含行政體系裡法務部的檢察官，而行政和司法，又怎能分立和彼此制衡呢？其他法治國家，是不會犯下這種體制錯亂的。</p><p>我們不得不佩服這些搞法律的人，比廣告人還會玩弄混淆視聽的文字！搞了一個違反憲政體制設計的司法人員人事條例，就把身分和立場完全不同的檢察官偷渡成法官，統稱「司法官」，享有「法官級」待遇；還將檢察署和法院設在一起，各有偵查庭和法庭，讓法官和檢察官於同一建築物內辦公。我想，歐美法治先進的國家，恐怕很難接受這種法官、檢察官一家親的安排！</p><p>▲為反年金改革，退將們以「八百壯士」為名，在立法院外紮營抗議。（圖／記者李毓康攝）</p><p>鞏固威權Vs.落實保障</p><p>過去，在蔣家所建立的威權體制裡，檢察署和檢察官就是《憲法》體制外的「特別法院」和「超級法官」，不但待遇和法官一般高，而且檢察官也能自己開庭（偵查庭）審問人民，更享有法官所沒有的主動權力，例如指揮調查局、警察和憲調組的權力，進行搜索、逮捕、羈押、監聽、以及財物的扣押和沒收等無限大的公權力。</p><p>在那個年代，檢察官起訴的案子定罪率和今天的中國一樣高──90％！直白的説，當時的法院只是個戲場子而已，法官則是傀儡，檢察官才是司法審判的導演。蔣家父子為何要給檢察官這麼大的權力和這麼好的待遇呢？任何具正常智力的人都可以知道原因：獨裁者沒有爪牙，就無法鞏固自己的統治地位。</p><p>今天，我們司改的重點不是要追究威權體制裡，長期殘害人權的司法共犯結構，但也不該讓那些協助蔣家清洗台灣異議人士的法曹，繼續擔任司法和檢察機關的高官。人民的期待，無非是希望盡速落實《憲法》對基本人權與私有財產的保障；司改成敗的關鍵，應該著墨於「周處如何順利除三害」。</p><p>獵狗Vs.獵人</p><p>1987年，台灣解嚴了，但還是等了10年之久，檢察官違憲的權力才開始受到限縮；而檢察官的羈押權，則到了1997年才回歸法院。2001年，檢察官的搜索權經修法後規定需由法院同意；2007年，監聽需法院同意；而扣押沒收的最終裁定權，則晩至2016年才轉移回法院。台灣這些年來，保障人權和財產權的進步，主要來自政治上的民主化力量，並非來自法官和檢察官的檢討和反省。</p><p>然而，解嚴後至今30年之間，台灣每天發生多少檢察官違憲搜索、羈押、監聽和扣押沒收之情事，多數法官也不曾對檢察官的這些違憲職權，主動申請過程釋憲，而檢察官更不會拒絕遵照違憲的法令辨案。比起街頭爭取民主和民權的一般民眾，生活在舒適圈的他們，缺少正是追求正義的勇氣。</p><p>台灣這些受《憲法》優厚保障的法官，眼中有沒有《憲法》和人權的普世價值？有人常開玩笑的説：科學家是訓練有素的狗。但是這種說法並不適合用在法律訓練有素的法官和檢察官身上，不是因為他們不懂科學的邏輯分析，而是因為他們是訓練有素的獵人。</p><p>美國每位法官的產生，不是考試錄取而來的，但都需具有律師資格；法官不是直接由人民選舉，就是由行政首長指派且經議會同意任命而產生。除了聯邦法官是終身職，其他法官都是任期制。這樣產生的過程就會淘汰表現不佳的法官，根本不必特別設計退場機制。</p><p>此外，美國檢察官（檢察長）的産生方式和法官大同小異，但都需有律師資格且有一定時間的任期，不過沒有連任次數的限制。做為檢察系統主力的助理檢察官（皆需具律師資格），則由檢察官（檢察長）公開甄選後，由法務首長聘任，並無任期或終身（Tenure）的保障。這樣民主化的司法圈子，經過200、300年來，不但沒有民粹化也沒有崩潰，還成為《憲法》和民主的鐵衞部隊。</p><p>▲美國法官除聯邦法官為終身職，其他都是任期制，如此就能淘汰表現不佳的法官，不必特別設計退場機制。（圖／達志／示意圖）</p><p>恐龍法官Vs.正義使者</p><p>反觀台灣法官和檢察官雖有公開考試，但一試過關後，幾乎就有了終身的富貴。而培訓的過程（司法官訓練所）又打造了近親繁殖的溫床，以及法官、檢察官不分的文化。圈子內不是師長、同學，就是長官和部屬的親密關係。況且，他們的升遷和評鑑，又多由自己圈內人辨理。於是，職位既有終身保障，又沒有人民的直接監督（選舉）或間接監督（議會的同意權和彈權），幾乎不會被淘汰，真是個令人羨煞的舒適圈。如此缺乏制度性的制衡機制，司法不會「恐龍化」才怪！</p><p>從一些司法資料中，可看出上述這些重大的人權變革過程裡，僅出現過一位台中地院法官，曾具文申請大法官對檢察官羈押權是否合憲的䆁憲案。至於法官在審理具體個案適用法規發生違憲爭議時，台灣2,000多位受到《憲法》終身優渥保障的法官，又到底做出了幾件違憲審查的實質貢獻呢？檢察官的表現固然令人失望，但所謂「獨立審判」的法官，表現更令人失望！</p><p>最近，美國多個聯邦地院的法官，勇敢捍衛《憲法》保障人權的精神。他們在最短時間內發出了禁制令（Injunction），馬上凍結了美國總統川普限制回教7國民眾入境的行政命令（Executive Order）。這才叫司法獨立，這種法官才叫人尊敬。</p><p>同一時間，美國至少有17個州的檢察長聯署聲明：「將動用一切法律手段，與這個違憲的行政命令做抗爭！」更有州的檢察長立即加入ACLU（美國公民自由聯盟，American Civil Liberties Union）控告川普政府的行動。就連川普政府的高官，包括司法代理部長葉茨和移民代理局長戴爾，也因勇於拒絕執行川普這個明顯違憲的行政命令而被開除。美國檢察官的表現，令人激賞。在美國高階檢察首長的心中，《憲法》的地位仍高於總統。這才是法律人的專業和格調！</p><p>爭人權Vs.爭特權</p><p>相形之下，台灣的司法和檢察體系的尊嚴在哪？檢察總長在民主化之後，居然還會帶著特偵組主動向統冶者獻身，成為總統進行政治鬥爭的錦衣衞！在過去的一甲子裡，我們更沒聽說過台灣哪位在職檢察官和法官曾經挺身護憲，反對過去威權政府違憲的眾多法令和草菅人命的恐怖統治行為。倒是都能在彼此通力的合作之下，配合獨裁者的旨意，迅速的將民主和人權的鬥士逮捕、起訴、定罪、和嚴懲。這種司法怎麼可能令人民尊敬和信任！</p><p>與美國司法界相比，台灣的法官和檢察官，長期以來的表現只會讓大家覺得悲哀。但他們仍舊高高在上，批評台灣一般民眾沒有法律專業素養，哪有資格擔當陪審團的任務，好像只有他們才能成為司法的「正義使者」。然而，司改會裡，他們爭的，卻是如何保障自己的優厚待遇！</p><p>好文推薦</p><p>林忠正／恐龍司法怎麼改？陪審制有解</p><p>林忠正／美中貿易之戰：To Do or Not To Do？</p><p>林忠正／線上修學位：翻轉高等教育困境</p><p>林忠正／低利率政策，知識經濟的害人毒癮</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●林忠正，經濟學博士，曾任立委、金管會委員、民進黨副秘書長、及中研院、台大教授。以上言論不代表本報立場。88論壇歡迎更多聲音與討論，來稿請寄editor88@ettoday.net</p> #林忠正 #學者 #第三組 #檢察官定位 #ETToday東森新聞雲 #2017-03-07
+- <h2><a href="http://www.ettoday.net/news/20170307/878821.htm" target="_blank">林忠正／司改爭得是民權，不是司法官特權！</a></h2><p>▲司法改革國是會議第一分組首次會議3月1日登場，身為委員之ㄧ的「小燈泡」母親王婉諭也列席討論。</p><p>文／林忠正</p><p>司法改革國是會議尚未登場，法官與檢察官已在籌備會議上公然開幹了！</p><p>雙方所爭執的點在於：誰才是《憲法》保障的法官身分？行政體系的法務部，所管轄的司法官──檢察官，擔心自己會在司改國是會議上失去了司法官的身分，因為那包括高額的司法加給、退養金、職位的保障和行使權力的獨立性，這些，都可能被司改會決議撤銷而化為烏有。於是，在憂心失去「大權」與「大錢」之下，檢察官終於向正牌的「司法官」發動政治鬥爭了！</p><p>司改爭議Vs.八百壯士</p><p>這些誓言「維護正義」的檢察官，如今為了保護自身優渥的權利，居然忘了什麼叫做「正義」，不但杯葛正牌法官參與籌備會的討論，甚至透過法務部首長向司法院長表達極度不爽之意。這種表現，很像現在立法院前埋鍋造飯的「八百壯士」，為了捍衛優厚退休金而誓死打拚。</p><p>其實，在歐美國家多數檢察官的待遇不及法官的一半，但也不敢要求比照法官的處理。而台灣多數檢察官職務，僅相當於美國的助理檢察官。美國一個司法轄區只有一個民選，或由行政首長指派，但經議會同意所任命的檢察官（或稱檢察長），其餘辨案的律師，都叫做助理檢察官。</p><p>老美的檢察系統職位簡單明瞭，不像我們有那麼多的官階和主管；但我們初任檢察官的薪資若換算成美金，卻比美國的助理檢察官高出2、3成之多。這種待遇，救連老美都會流口水，怪不得他們要用力去爭！</p><p>法官Vs.司法官</p><p>事實上，我們這套長期淪為「獨裁者花瓶」的《憲法》裡，在〈司法〉這章的主角，只有提到「司法院」和「法官」而已，而且也指明「掌管審判的法官」才能享有終身的保障。也就是說，在《憲法》裡完全沒有「司法官」這個偽名詞；就連「檢察官」這3個字在〈司法〉這章裡更是連邊都沾不上。依《憲法》的真正旨意，檢察官只能歸屬於「廣意」的警察機關人員。若是如此，檢察官的身分和待遇，怎能自比法官呢？</p><p>此外，在《憲法》的〈人民之權利義務〉這章裡，也表明了：「非由法院依法定程序，不得審問處罰……」什麼時候我們的《憲法》曾讓行政體系的檢察官，變成了司法官呢？獨立的司法體系裡，怎麼能包含行政體系裡法務部的檢察官，而行政和司法，又怎能分立和彼此制衡呢？其他法治國家，是不會犯下這種體制錯亂的。</p><p>我們不得不佩服這些搞法律的人，比廣告人還會玩弄混淆視聽的文字！搞了一個違反憲政體制設計的司法人員人事條例，就把身分和立場完全不同的檢察官偷渡成法官，統稱「司法官」，享有「法官級」待遇；還將檢察署和法院設在一起，各有偵查庭和法庭，讓法官和檢察官於同一建築物內辦公。我想，歐美法治先進的國家，恐怕很難接受這種法官、檢察官一家親的安排！</p><p>▲為反年金改革，退將們以「八百壯士」為名，在立法院外紮營抗議。（圖／記者李毓康攝）</p><p>鞏固威權Vs.落實保障</p><p>過去，在蔣家所建立的威權體制裡，檢察署和檢察官就是《憲法》體制外的「特別法院」和「超級法官」，不但待遇和法官一般高，而且檢察官也能自己開庭（偵查庭）審問人民，更享有法官所沒有的主動權力，例如指揮調查局、警察和憲調組的權力，進行搜索、逮捕、羈押、監聽、以及財物的扣押和沒收等無限大的公權力。</p><p>在那個年代，檢察官起訴的案子定罪率和今天的中國一樣高──90％！直白的説，當時的法院只是個戲場子而已，法官則是傀儡，檢察官才是司法審判的導演。蔣家父子為何要給檢察官這麼大的權力和這麼好的待遇呢？任何具正常智力的人都可以知道原因：獨裁者沒有爪牙，就無法鞏固自己的統治地位。</p><p>今天，我們司改的重點不是要追究威權體制裡，長期殘害人權的司法共犯結構，但也不該讓那些協助蔣家清洗台灣異議人士的法曹，繼續擔任司法和檢察機關的高官。人民的期待，無非是希望盡速落實《憲法》對基本人權與私有財產的保障；司改成敗的關鍵，應該著墨於「周處如何順利除三害」。</p><p>獵狗Vs.獵人</p><p>1987年，台灣解嚴了，但還是等了10年之久，檢察官違憲的權力才開始受到限縮；而檢察官的羈押權，則到了1997年才回歸法院。2001年，檢察官的搜索權經修法後規定需由法院同意；2007年，監聽需法院同意；而扣押沒收的最終裁定權，則晩至2016年才轉移回法院。台灣這些年來，保障人權和財產權的進步，主要來自政治上的民主化力量，並非來自法官和檢察官的檢討和反省。</p><p>然而，解嚴後至今30年之間，台灣每天發生多少檢察官違憲搜索、羈押、監聽和扣押沒收之情事，多數法官也不曾對檢察官的這些違憲職權，主動申請過程釋憲，而檢察官更不會拒絕遵照違憲的法令辨案。比起街頭爭取民主和民權的一般民眾，生活在舒適圈的他們，缺少正是追求正義的勇氣。</p><p>台灣這些受《憲法》優厚保障的法官，眼中有沒有《憲法》和人權的普世價值？有人常開玩笑的説：科學家是訓練有素的狗。但是這種說法並不適合用在法律訓練有素的法官和檢察官身上，不是因為他們不懂科學的邏輯分析，而是因為他們是訓練有素的獵人。</p><p>美國每位法官的產生，不是考試錄取而來的，但都需具有律師資格；法官不是直接由人民選舉，就是由行政首長指派且經議會同意任命而產生。除了聯邦法官是終身職，其他法官都是任期制。這樣產生的過程就會淘汰表現不佳的法官，根本不必特別設計退場機制。</p><p>此外，美國檢察官（檢察長）的産生方式和法官大同小異，但都需有律師資格且有一定時間的任期，不過沒有連任次數的限制。做為檢察系統主力的助理檢察官（皆需具律師資格），則由檢察官（檢察長）公開甄選後，由法務首長聘任，並無任期或終身（Tenure）的保障。這樣民主化的司法圈子，經過200、300年來，不但沒有民粹化也沒有崩潰，還成為《憲法》和民主的鐵衞部隊。</p><p>▲美國法官除聯邦法官為終身職，其他都是任期制，如此就能淘汰表現不佳的法官，不必特別設計退場機制。（圖／達志／示意圖）</p><p>恐龍法官Vs.正義使者</p><p>反觀台灣法官和檢察官雖有公開考試，但一試過關後，幾乎就有了終身的富貴。而培訓的過程（司法官訓練所）又打造了近親繁殖的溫床，以及法官、檢察官不分的文化。圈子內不是師長、同學，就是長官和部屬的親密關係。況且，他們的升遷和評鑑，又多由自己圈內人辨理。於是，職位既有終身保障，又沒有人民的直接監督（選舉）或間接監督（議會的同意權和彈權），幾乎不會被淘汰，真是個令人羨煞的舒適圈。如此缺乏制度性的制衡機制，司法不會「恐龍化」才怪！</p><p>從一些司法資料中，可看出上述這些重大的人權變革過程裡，僅出現過一位台中地院法官，曾具文申請大法官對檢察官羈押權是否合憲的䆁憲案。至於法官在審理具體個案適用法規發生違憲爭議時，台灣2,000多位受到《憲法》終身優渥保障的法官，又到底做出了幾件違憲審查的實質貢獻呢？檢察官的表現固然令人失望，但所謂「獨立審判」的法官，表現更令人失望！</p><p>最近，美國多個聯邦地院的法官，勇敢捍衛《憲法》保障人權的精神。他們在最短時間內發出了禁制令（Injunction），馬上凍結了美國總統川普限制回教7國民眾入境的行政命令（Executive Order）。這才叫司法獨立，這種法官才叫人尊敬。</p><p>同一時間，美國至少有17個州的檢察長聯署聲明：「將動用一切法律手段，與這個違憲的行政命令做抗爭！」更有州的檢察長立即加入ACLU（美國公民自由聯盟，American Civil Liberties Union）控告川普政府的行動。就連川普政府的高官，包括司法代理部長葉茨和移民代理局長戴爾，也因勇於拒絕執行川普這個明顯違憲的行政命令而被開除。美國檢察官的表現，令人激賞。在美國高階檢察首長的心中，《憲法》的地位仍高於總統。這才是法律人的專業和格調！</p><p>爭人權Vs.爭特權</p><p>相形之下，台灣的司法和檢察體系的尊嚴在哪？檢察總長在民主化之後，居然還會帶著特偵組主動向統冶者獻身，成為總統進行政治鬥爭的錦衣衞！在過去的一甲子裡，我們更沒聽說過台灣哪位在職檢察官和法官曾經挺身護憲，反對過去威權政府違憲的眾多法令和草菅人命的恐怖統治行為。倒是都能在彼此通力的合作之下，配合獨裁者的旨意，迅速的將民主和人權的鬥士逮捕、起訴、定罪、和嚴懲。這種司法怎麼可能令人民尊敬和信任！</p><p>與美國司法界相比，台灣的法官和檢察官，長期以來的表現只會讓大家覺得悲哀。但他們仍舊高高在上，批評台灣一般民眾沒有法律專業素養，哪有資格擔當陪審團的任務，好像只有他們才能成為司法的「正義使者」。然而，司改會裡，他們爭的，卻是如何保障自己的優厚待遇！</p><p>好文推薦</p><p>林忠正／恐龍司法怎麼改？陪審制有解</p><p>林忠正／美中貿易之戰：To Do or Not To Do？</p><p>林忠正／線上修學位：翻轉高等教育困境</p><p>林忠正／低利率政策，知識經濟的害人毒癮</p><p>●林忠正，經濟學博士，曾任立委、金管會委員、民進黨副秘書長、及中研院、台大教授。以上言論不代表本報立場。88論壇歡迎更多聲音與討論，來稿請寄editor88@ettoday.net</p> #林忠正 #學者 #第三組 #檢察官定位 #ETToday東森新聞雲 #2017-03-07
 
 # 吳東都
 ## backgrounds
@@ -1534,7 +1534,7 @@
 
 ## articles
 ### 2017/03/10 GMT0+8:00 http://www.ettoday.net/news/20170310/881919.htm
-- <h2><a href="http://www.ettoday.net/news/20170310/881919.htm" target="_blank">董介白／談獄政革新，從尊重受刑人基本人權做起</a></h2><p>▲獄政改革，應以刑罰與矯正並重。（圖／記者徐文彬攝）</p><p>文／董介白</p><p>法務部為迎接司改國是會議，昨揭露不待修法的獄政革新計畫，目標要提升受刑人的基本人權，幫受刑人翻轉人生，就受刑人的基本人權論，受刑人是接受國家刑罰監禁，是關而非罰，他們該享有的人權並不因被關而遭到剝奪，法務部洋洋灑列出四大革新重點，但要提醒當局，制度上的改革值得肯定，但在執行面上，類似蹲著跟管理員講話的情況依舊存在，隱藏著革新所未能涵蓋的死角。</p><p>全國獄政的主管機關從過去隸屬在法務部的監所司、矯正司，到成立矯正署，單從名稱上的微調，可見獄政管理隨著時代的進步，已從過去的懲罰，逐步邁向透明化、人性化與教導化，總的來說，是刑罰與矯正並重。</p><p>說的更貼切點，受刑人除了是待決的死刑犯之外，受徒刑宣告的受刑人，他們只是人身自由遭到剝奪，受刑人的其他人權並不因被關而喪失，仍應受有憲法上的保障。</p><p>在蔡政府上任後的司法改革國是會議，獄政改革篇幅甚小，說實在的只是配角小菜，一向以來，都是監獄出了暴動等大事後，輿論關注的壓力才會引起法務當局的重視，否則說要獄政革新都僅僅是官樣文章敷衍應付而已。</p><p>在全國26所成年監獄的管理現況中，獄方是依據監獄行刑法施行細則第18要求受刑人應遵守的監獄紀律，違反者可處以停止面會接見、停止戶外放風活動，甚至可以禁止受刑人向獄內的合作社購買物品等處罰；先說說管理上要求的紀律，包括服從管教，不得有違抗命令或妨害秩序之行為，安分守己，不得有爭吵鬥毆或脫逃、強暴之行為等總共九款。</p><p>▲受刑人的人身自由受到剝奪，其他人權並不因被關而喪失。（圖／記者徐文彬攝）</p><p>事實上，監獄為了管理方便，恣意自訂的所謂「紀律」並不少見。例如迄今仍實施軍事化管理，對管理人員喊「報告」「長官」，行舉手禮，唱半世紀前的軍歌，又例如規定受刑人碰到戒護科長，必須蹲下抱頭看地面，不准直視戒護科長或高階戒護管理人員；此外，管理員說話時，受刑人必須蹲下，不准站立；在獄內行走必須走一直線，轉彎時必須直角轉彎，帶入書籍不准有硬皮的精裝本，如堅持帶入必須先撕毀書皮等等。</p><p>類似上述的紀律要求，可說是不勝枚舉，不同監獄又有不同的標準，運氣好碰到較有法治觀念的典獄長，該監獄的管理文化自然較符合人性，但碰到強硬的典獄長或老派的資深管理員時，一些離譜的不當管理就會出現。</p><p>過去，就有立委在質詢矯正署長時，傳出受刑人在舍房內上大號時，只能用濕毛巾擦拭屁股，而不能使用衛生紙的離奇現象，矯正署長一席用水清洗如同「免治馬桶」的回答，真的讓人哭笑不得；在監獄的次文化中，因為雜居的關係，一間舍房擠進十幾個人一起睡，如果輪流上大號，味道自然充斥在舍房內，因為是團體生活的緣故， 同住一間舍房的受刑人會約定如要上大號，除非是忍不住的拉肚子，否則儘量利用在工場作業時，使用工場的廁所。</p><p>雖然矯正署澄清否認，未限制受刑人購買衛生紙擦屁股，但來自監獄的聲音，依然存在有管理員因擔心馬桶塞住，禁止受刑人使用衛生紙，當然也有受刑人自費購買專用垃圾袋，但這是外界所難以想像的，有的受刑人為了結省費用，加上監獄設備的不足，以及獄政管理上的差異，不得已享受另類的免治馬桶。</p><p>監所即要談教化，讓受刑人悔過遷善，重新復歸社會，過去那種高高在上的管理及歧視心態非調整不可，例如為何一定要受刑人蹲在跟管理員講話，法務部上級長官到監獄巡視時，過去還有受刑人必須蹲著面向兩側，類似封建時代大官出巡時閒人迴避的場景出現；這幾年，矯正署雖調整讓受刑人坐在地上或塑膠板凳上講話，但要求受刑人蹲著跟管理員講話的類似個案情況一樣再發生，建議獄政當局在談獄政改革時，不如從尊重受刑人的基本人權做起，否則再有美麗漂亮的制度變革，都是奢談。</p><p>好文推薦</p><p>董介白／檢察官在緊張什麼？</p><p>董介白／柯控馬洩密、馬模糊焦點，洩密違憲政體制官司不利</p><p>董介白／林若亞抗稅成功苦等10年！大法官應速審指標案</p><p>董介白／羈押庭宵禁修法人權向前走</p><p>董介白／檢察官、法官心態改革，司改才能成功</p><p>董介白／特偵組關門大吉天注定</p><p>董介白／台灣監獄一人一床難如登天？</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●董介白，東森新聞雲撰述副總編輯，以上言論不代表本公司立場。88論壇歡迎多元的聲音與觀點，來稿請寄：editor88@ettoday.net</p> #董介白 #其他 #ETToday東森新聞雲 #2017-03-10
+- <h2><a href="http://www.ettoday.net/news/20170310/881919.htm" target="_blank">董介白／談獄政革新，從尊重受刑人基本人權做起</a></h2><p>▲獄政改革，應以刑罰與矯正並重。（圖／記者徐文彬攝）</p><p>文／董介白</p><p>法務部為迎接司改國是會議，昨揭露不待修法的獄政革新計畫，目標要提升受刑人的基本人權，幫受刑人翻轉人生，就受刑人的基本人權論，受刑人是接受國家刑罰監禁，是關而非罰，他們該享有的人權並不因被關而遭到剝奪，法務部洋洋灑列出四大革新重點，但要提醒當局，制度上的改革值得肯定，但在執行面上，類似蹲著跟管理員講話的情況依舊存在，隱藏著革新所未能涵蓋的死角。</p><p>全國獄政的主管機關從過去隸屬在法務部的監所司、矯正司，到成立矯正署，單從名稱上的微調，可見獄政管理隨著時代的進步，已從過去的懲罰，逐步邁向透明化、人性化與教導化，總的來說，是刑罰與矯正並重。</p><p>說的更貼切點，受刑人除了是待決的死刑犯之外，受徒刑宣告的受刑人，他們只是人身自由遭到剝奪，受刑人的其他人權並不因被關而喪失，仍應受有憲法上的保障。</p><p>在蔡政府上任後的司法改革國是會議，獄政改革篇幅甚小，說實在的只是配角小菜，一向以來，都是監獄出了暴動等大事後，輿論關注的壓力才會引起法務當局的重視，否則說要獄政革新都僅僅是官樣文章敷衍應付而已。</p><p>在全國26所成年監獄的管理現況中，獄方是依據監獄行刑法施行細則第18要求受刑人應遵守的監獄紀律，違反者可處以停止面會接見、停止戶外放風活動，甚至可以禁止受刑人向獄內的合作社購買物品等處罰；先說說管理上要求的紀律，包括服從管教，不得有違抗命令或妨害秩序之行為，安分守己，不得有爭吵鬥毆或脫逃、強暴之行為等總共九款。</p><p>▲受刑人的人身自由受到剝奪，其他人權並不因被關而喪失。（圖／記者徐文彬攝）</p><p>事實上，監獄為了管理方便，恣意自訂的所謂「紀律」並不少見。例如迄今仍實施軍事化管理，對管理人員喊「報告」「長官」，行舉手禮，唱半世紀前的軍歌，又例如規定受刑人碰到戒護科長，必須蹲下抱頭看地面，不准直視戒護科長或高階戒護管理人員；此外，管理員說話時，受刑人必須蹲下，不准站立；在獄內行走必須走一直線，轉彎時必須直角轉彎，帶入書籍不准有硬皮的精裝本，如堅持帶入必須先撕毀書皮等等。</p><p>類似上述的紀律要求，可說是不勝枚舉，不同監獄又有不同的標準，運氣好碰到較有法治觀念的典獄長，該監獄的管理文化自然較符合人性，但碰到強硬的典獄長或老派的資深管理員時，一些離譜的不當管理就會出現。</p><p>過去，就有立委在質詢矯正署長時，傳出受刑人在舍房內上大號時，只能用濕毛巾擦拭屁股，而不能使用衛生紙的離奇現象，矯正署長一席用水清洗如同「免治馬桶」的回答，真的讓人哭笑不得；在監獄的次文化中，因為雜居的關係，一間舍房擠進十幾個人一起睡，如果輪流上大號，味道自然充斥在舍房內，因為是團體生活的緣故， 同住一間舍房的受刑人會約定如要上大號，除非是忍不住的拉肚子，否則儘量利用在工場作業時，使用工場的廁所。</p><p>雖然矯正署澄清否認，未限制受刑人購買衛生紙擦屁股，但來自監獄的聲音，依然存在有管理員因擔心馬桶塞住，禁止受刑人使用衛生紙，當然也有受刑人自費購買專用垃圾袋，但這是外界所難以想像的，有的受刑人為了結省費用，加上監獄設備的不足，以及獄政管理上的差異，不得已享受另類的免治馬桶。</p><p>監所即要談教化，讓受刑人悔過遷善，重新復歸社會，過去那種高高在上的管理及歧視心態非調整不可，例如為何一定要受刑人蹲在跟管理員講話，法務部上級長官到監獄巡視時，過去還有受刑人必須蹲著面向兩側，類似封建時代大官出巡時閒人迴避的場景出現；這幾年，矯正署雖調整讓受刑人坐在地上或塑膠板凳上講話，但要求受刑人蹲著跟管理員講話的類似個案情況一樣再發生，建議獄政當局在談獄政改革時，不如從尊重受刑人的基本人權做起，否則再有美麗漂亮的制度變革，都是奢談。</p><p>好文推薦</p><p>董介白／檢察官在緊張什麼？</p><p>董介白／柯控馬洩密、馬模糊焦點，洩密違憲政體制官司不利</p><p>董介白／林若亞抗稅成功苦等10年！大法官應速審指標案</p><p>董介白／羈押庭宵禁修法人權向前走</p><p>董介白／檢察官、法官心態改革，司改才能成功</p><p>董介白／特偵組關門大吉天注定</p><p>董介白／台灣監獄一人一床難如登天？</p><p>●董介白，東森新聞雲撰述副總編輯</p> #董介白 #其他 #ETToday東森新聞雲 #2017-03-10
 
 # 黃奕超
 ## backgrounds
@@ -1786,7 +1786,7 @@
 
 ## articles
 ### 2017/03/14 GMT0+8:00 http://www.ettoday.net/news/20170314/884291.htm
-- <h2><a href="http://www.ettoday.net/news/20170314/884291.htm" target="_blank">李永然／加強受刑人「再社會化」，矯正執行應列為國策</a></h2><p>▲監所應加強受刑人的「再社會化」，政府也應重視矯正執行的發展與投資，改善監獄存在的各種問題。（圖／記者徐文彬攝）</p><p>全國司法改革會議正在進行籌備會議，其中議題也包括探討監所問題，日前法務部邱太三部長也針對目前監所的問題提出四大改善措施。</p><p>就此問題筆者認為，台灣目前矯正機關設施的老舊及不足；另外相關法規也落伍過時，同時矯正執行人員也有些觀念不正確的情形存在。設施老舊及不足固然可以修繕、擴建、改建，甚至新建來加以改善；但矯正執行法規過時與不足，即須矯正機關官員絞盡腦汁，進行修法或擬定新法。又矯正執行人員的過時與不當觀念，除靠教育訓練外，更賴法務部與矯正署等首長，提出相關矯正執行策略，並探討可行後，貫徹執行。</p><p>台灣目前監獄裡有6萬餘名的受刑人，他們也是中華民國的國民，將來也會有回歸社會的一天，而不可能永遠待在監獄裡，監所應加強受刑人的「再社會化」。如果監所對受刑人的教化不彰，那政府每年編列數十億乃至上百億台幣的矯正預算，則無異於「徒然浪費」了。筆者認為，目前我國司法改革會議能注意矯正執行機關的改進是正確及必要的，同時政府應重視矯正執行，並將之列為重要國策。</p><p>筆者認為，為了社會的安寧及受刑人服刑完畢後重返社會，政府重視矯正執行的發展與投資，其實是值得及必要的。因為唯有如此，方能達到改善我國目前監獄存在的各種窘況，故筆者建議應採取下述作為：</p><p>1.改造監獄硬體，除戒護專業要求外，應兼顧受刑人的生活照應，使監獄與社會一般生活品質，不要有太大差距。</p><p>2.修訂過時與補充不足的矯正法規，以維護監獄管理合法化、合理化，提升受刑人基本人權；更需創制能夠支應日後矯正執行發展的新法規。</p><p>3.矯正執行公務人員的再教育，與發展能夠配合我國矯正執行國策的矯正執行文化，以充分保障尊重監獄受刑人應有的基本人權。</p><p>俗云：「公門好修行」，矯正執行機關的公務員要有這種觀念。監所執行人員只要稍具「同理心」，一個微笑、一句鼓勵的言語，一個拍拍肩膀的舉動，簡單又不違法的方便，對處在人生最低潮的受刑人，都能銘感五內，終身受用。但相反的，如不尊重甚至踐踏受刑人人格的舉動，則不論是否合法，受刑人將會對管理人員記恨一輩子。盼筆者上述建議，如蒙採納，將使我國監所管理及受刑人的教化能有所改善及提升，符合「人權治國」之理念！</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●李永然，永然聯合法律事務所所長、永然兩岸法律事務中心創辦人、中華人權協會名譽理事長。以上言論不代表本公司立場。</p> #李永然 #其他 #第五組 #獄政 #ETToday東森新聞雲 #2017-03-14
+- <h2><a href="http://www.ettoday.net/news/20170314/884291.htm" target="_blank">李永然／加強受刑人「再社會化」，矯正執行應列為國策</a></h2><p>▲監所應加強受刑人的「再社會化」，政府也應重視矯正執行的發展與投資，改善監獄存在的各種問題。（圖／記者徐文彬攝）</p><p>全國司法改革會議正在進行籌備會議，其中議題也包括探討監所問題，日前法務部邱太三部長也針對目前監所的問題提出四大改善措施。</p><p>就此問題筆者認為，台灣目前矯正機關設施的老舊及不足；另外相關法規也落伍過時，同時矯正執行人員也有些觀念不正確的情形存在。設施老舊及不足固然可以修繕、擴建、改建，甚至新建來加以改善；但矯正執行法規過時與不足，即須矯正機關官員絞盡腦汁，進行修法或擬定新法。又矯正執行人員的過時與不當觀念，除靠教育訓練外，更賴法務部與矯正署等首長，提出相關矯正執行策略，並探討可行後，貫徹執行。</p><p>台灣目前監獄裡有6萬餘名的受刑人，他們也是中華民國的國民，將來也會有回歸社會的一天，而不可能永遠待在監獄裡，監所應加強受刑人的「再社會化」。如果監所對受刑人的教化不彰，那政府每年編列數十億乃至上百億台幣的矯正預算，則無異於「徒然浪費」了。筆者認為，目前我國司法改革會議能注意矯正執行機關的改進是正確及必要的，同時政府應重視矯正執行，並將之列為重要國策。</p><p>筆者認為，為了社會的安寧及受刑人服刑完畢後重返社會，政府重視矯正執行的發展與投資，其實是值得及必要的。因為唯有如此，方能達到改善我國目前監獄存在的各種窘況，故筆者建議應採取下述作為：</p><p>1.改造監獄硬體，除戒護專業要求外，應兼顧受刑人的生活照應，使監獄與社會一般生活品質，不要有太大差距。</p><p>2.修訂過時與補充不足的矯正法規，以維護監獄管理合法化、合理化，提升受刑人基本人權；更需創制能夠支應日後矯正執行發展的新法規。</p><p>3.矯正執行公務人員的再教育，與發展能夠配合我國矯正執行國策的矯正執行文化，以充分保障尊重監獄受刑人應有的基本人權。</p><p>俗云：「公門好修行」，矯正執行機關的公務員要有這種觀念。監所執行人員只要稍具「同理心」，一個微笑、一句鼓勵的言語，一個拍拍肩膀的舉動，簡單又不違法的方便，對處在人生最低潮的受刑人，都能銘感五內，終身受用。但相反的，如不尊重甚至踐踏受刑人人格的舉動，則不論是否合法，受刑人將會對管理人員記恨一輩子。盼筆者上述建議，如蒙採納，將使我國監所管理及受刑人的教化能有所改善及提升，符合「人權治國」之理念！</p><p>●李永然，永然聯合法律事務所所長、永然兩岸法律事務中心創辦人、中華人權協會名譽理事長。</p> #李永然 #其他 #第五組 #獄政 #ETToday東森新聞雲 #2017-03-14
 
 # 林奕宏
 ## backgrounds
@@ -1930,7 +1930,7 @@
 
 ## articles
 ### 2017/03/16 GMT0+8:00 http://www.ettoday.net/news/20170316/885072.htm
-- <h2><a href="http://www.ettoday.net/news/20170316/885072.htm" target="_blank">尤伯祥／省錢司改，跟著德國這樣做就對了！</a></h2><p>▲為解決檢察官人力荒，達到省錢司改，可仿效德國的做法。（Photo by gil4r56y／Flicker／示意圖）</p><p>根據中時電子報106年3月13日〈防濫訴學德國無關公益轉自訴〉的報導，由於現行的告訴制度免費，於是好訟之徒動輒提告。諸如網路互罵而告誹謗、複製網路圖片被告違反《著作權法》、大樓管委會貼催繳管理費通知而被告違反《個資法》，不一而足。這些案件大多數不會被起訴，但檢察官卻須投入時間及精力偵查。</p><p>普遍存在的「濫訴」現象，不但使被訴者苦惱，更造成檢察官工作超量，非改不可。這篇報導並與近來不少基層檢察官的投書一致，建議為了遏止濫訴，讓檢察官能專注偵查重大犯罪，可仿效德國，將諸如誹謗等無關公益的微罪案件，改採自訴人須負擔費用的強制自訴（我國目前的自訴制度並未收費），藉費用負擔及強制律師代理來遏止「濫訴」，或者乾脆把這類無關公共利益的犯罪類型除罪化。</p><p>在漢文化裡，的確有悠久的以刑逼民傳統，但把提告誹謗、詐欺、背信、侵占這類侵害個人法益犯罪不成功的告訴人，一概稱為濫訴，則未免獨斷。案件最終被不起訴的理由，可能是所告情事在法律上顯不成罪，可能是微罪不舉，更多的是經偵查後認為罪證不足。無論何者，都是檢察官主觀判斷的結果。因此，以不起訴的結果作為濫訴的判準，等於是否濫訴全憑檢察官說了算。事實上，根本找不到判斷孰為濫訴的客觀標準。尤其檢察官負有偵查之責，要是因為檢察官怠於偵查，最後以罪證不足為由不起訴，卻可以反過來指責告訴人濫訴，等於是允許檢察官把責任推給告訴人，更是焉有是理。濫訴的說法背後其實是（告人）不成功便成仁的邏輯，與古代官府為了遏止民眾告狀所設的反坐之罰其實是同樣思維，目的都在阻擋民眾申告，以解決官署不堪負荷的問題。</p><p>因此，要想藉由遏止所謂濫訴來解決檢察官的工作超量問題，根本是搞錯了目標。司法體系是為了保障人民權利而設，若規定以上這些侵害個人法益的輕罪被害人一律只得自訴（而且要付費），這樣的司改恐怕只會激起更大民怨，而且只是把案件推給法院，根本是以鄰為壑，其實也與其所欲仿效的德國制度大相逕庭。德國的自訴雖然採取有償制，但並未規定特定犯罪的被害人只能提自訴。</p><p>德國值得借鏡之處，是檢察官的實務作業方式。雖然德國檢察官也是偵查主體，但體認到自己是法律專家，並無偵查專業及資源，可謂「有頭無手」，因此實務上偵查大部分還是移轉給警察主導。通常警察獨立偵辦犯罪，偵查告一段落後才將案件移送給檢察機關，檢察官只需決定起訴或不起訴。若認為警察的偵查尚未完備，則會再命警察補充蒐證。只有在極嚴重犯罪、商業犯罪或有組織犯罪等特殊情況下，檢察官才會以口頭指示的方式參與偵查。因此，德國檢察官原則上不訊問被告或證人，檢察機關內也沒有偵查庭的設置（若例外需要訊問，則在檢察官的辦公室內進行）。反觀我國，開偵查庭訊問被告及證人，耗費檢察官大部分的上班時間，比起德國，可謂極無效率的作法。</p><p>除了偵查庭，另一個無謂耗費檢察官精力與時間的工作，是引用卷證撰寫形式類似法院判決書的不起訴處分書。之所以像判決書，是因為《刑事訴訟法》賦予不起訴處分等同確定判決的實質確定力。德國的不起訴處分（EinstellungdesVerfahrens）沒有實質確定力，因此除表示中止偵查之決定外，不須有太多內容。也因檢察機關得隨時續行偵查，故不需設再議制度以決定不起訴處分得否確定。</p><p>如果仿效德國的作法，不但辦案的基層檢察官可以省下許多開偵查庭及製作處分書的時間，高檢署也因不須處理再議而可釋放人力回基層，解決迭有檢察官投書反應的人力短缺問題。這樣的改革，僅需更動檢察官的工作方式及修改《刑事訴訟法》，卻可避免限制人民訴訟權的罵名，也強過未能提出具體人力需求，卻可能造成組織肥大及嚴重財政負擔的增員計畫（有論者倡議增加檢察官或增設副檢察官），才是真正的省錢司改。</p><p>►►►隨時加入觀點與討論，給雲論粉絲團按個讚！</p><p>●尤伯祥，義謙法律事務所主持律師、台北律師公會第27屆常務理事、中華民國律師公會全國聯合會憲政改革研究委員會主任委員、財團法人民間司法改革基金會常務執行委員、財團法人法律扶助基金會專門委員。以上言論不代表本公司立場。</p> #尤伯祥 #律師 #第三組 #濫訴 #檢察官過勞 #ETToday東森新聞雲 #2017-03-16
+- <h2><a href="http://www.ettoday.net/news/20170316/885072.htm" target="_blank">尤伯祥／省錢司改，跟著德國這樣做就對了！</a></h2><p>▲為解決檢察官人力荒，達到省錢司改，可仿效德國的做法。（Photo by gil4r56y／Flicker／示意圖）</p><p>根據中時電子報106年3月13日〈防濫訴學德國無關公益轉自訴〉的報導，由於現行的告訴制度免費，於是好訟之徒動輒提告。諸如網路互罵而告誹謗、複製網路圖片被告違反《著作權法》、大樓管委會貼催繳管理費通知而被告違反《個資法》，不一而足。這些案件大多數不會被起訴，但檢察官卻須投入時間及精力偵查。</p><p>普遍存在的「濫訴」現象，不但使被訴者苦惱，更造成檢察官工作超量，非改不可。這篇報導並與近來不少基層檢察官的投書一致，建議為了遏止濫訴，讓檢察官能專注偵查重大犯罪，可仿效德國，將諸如誹謗等無關公益的微罪案件，改採自訴人須負擔費用的強制自訴（我國目前的自訴制度並未收費），藉費用負擔及強制律師代理來遏止「濫訴」，或者乾脆把這類無關公共利益的犯罪類型除罪化。</p><p>在漢文化裡，的確有悠久的以刑逼民傳統，但把提告誹謗、詐欺、背信、侵占這類侵害個人法益犯罪不成功的告訴人，一概稱為濫訴，則未免獨斷。案件最終被不起訴的理由，可能是所告情事在法律上顯不成罪，可能是微罪不舉，更多的是經偵查後認為罪證不足。無論何者，都是檢察官主觀判斷的結果。因此，以不起訴的結果作為濫訴的判準，等於是否濫訴全憑檢察官說了算。事實上，根本找不到判斷孰為濫訴的客觀標準。尤其檢察官負有偵查之責，要是因為檢察官怠於偵查，最後以罪證不足為由不起訴，卻可以反過來指責告訴人濫訴，等於是允許檢察官把責任推給告訴人，更是焉有是理。濫訴的說法背後其實是（告人）不成功便成仁的邏輯，與古代官府為了遏止民眾告狀所設的反坐之罰其實是同樣思維，目的都在阻擋民眾申告，以解決官署不堪負荷的問題。</p><p>因此，要想藉由遏止所謂濫訴來解決檢察官的工作超量問題，根本是搞錯了目標。司法體系是為了保障人民權利而設，若規定以上這些侵害個人法益的輕罪被害人一律只得自訴（而且要付費），這樣的司改恐怕只會激起更大民怨，而且只是把案件推給法院，根本是以鄰為壑，其實也與其所欲仿效的德國制度大相逕庭。德國的自訴雖然採取有償制，但並未規定特定犯罪的被害人只能提自訴。</p><p>德國值得借鏡之處，是檢察官的實務作業方式。雖然德國檢察官也是偵查主體，但體認到自己是法律專家，並無偵查專業及資源，可謂「有頭無手」，因此實務上偵查大部分還是移轉給警察主導。通常警察獨立偵辦犯罪，偵查告一段落後才將案件移送給檢察機關，檢察官只需決定起訴或不起訴。若認為警察的偵查尚未完備，則會再命警察補充蒐證。只有在極嚴重犯罪、商業犯罪或有組織犯罪等特殊情況下，檢察官才會以口頭指示的方式參與偵查。因此，德國檢察官原則上不訊問被告或證人，檢察機關內也沒有偵查庭的設置（若例外需要訊問，則在檢察官的辦公室內進行）。反觀我國，開偵查庭訊問被告及證人，耗費檢察官大部分的上班時間，比起德國，可謂極無效率的作法。</p><p>除了偵查庭，另一個無謂耗費檢察官精力與時間的工作，是引用卷證撰寫形式類似法院判決書的不起訴處分書。之所以像判決書，是因為《刑事訴訟法》賦予不起訴處分等同確定判決的實質確定力。德國的不起訴處分（EinstellungdesVerfahrens）沒有實質確定力，因此除表示中止偵查之決定外，不須有太多內容。也因檢察機關得隨時續行偵查，故不需設再議制度以決定不起訴處分得否確定。</p><p>如果仿效德國的作法，不但辦案的基層檢察官可以省下許多開偵查庭及製作處分書的時間，高檢署也因不須處理再議而可釋放人力回基層，解決迭有檢察官投書反應的人力短缺問題。這樣的改革，僅需更動檢察官的工作方式及修改《刑事訴訟法》，卻可避免限制人民訴訟權的罵名，也強過未能提出具體人力需求，卻可能造成組織肥大及嚴重財政負擔的增員計畫（有論者倡議增加檢察官或增設副檢察官），才是真正的省錢司改。</p><p>●尤伯祥，義謙法律事務所主持律師、台北律師公會第27屆常務理事、中華民國律師公會全國聯合會憲政改革研究委員會主任委員、財團法人民間司法改革基金會常務執行委員、財團法人法律扶助基金會專門委員。</p> #尤伯祥 #律師 #第三組 #濫訴 #檢察官過勞 #ETToday東森新聞雲 #2017-03-16
 
 
 
